<resources>
    <string name="app_name">NAKAMA</string>
    <string name="play_button">Play Button</string>
    <string name="pause_button">Pause Button</string>
    <string name="reset_button">Reset Button</string>
    <string name="done_button">Done Button</string>
    <string name="zero_timer_value">02:00:00</string>

    <!--Common Dialog Resources-->
    <string name="dialog_positive_ok_button">OK</string>
    <string name="dialog_positive_yes_button">TAK</string>
    <string name="dialog_negative_button">NIE</string>
    <string name="confirm_dialog_title">Potwierdzenie</string>
    <!--Time Out Dialog Resources-->
    <string name="timeout_dialog_title">Koniec czasu</string>
    <string name="timeout_dialog_message">Czas próby upłynął</string>
    <!--Confirm reset Dialog Resources-->
    <string name="confirm_reset_dialog_message">Czy na pewno chcesz zresetować podejście? Wszystkie dotychczasowe dane zostaną utracone.</string>
    <!--Confirm attempt Dialog Resources-->
    <string name="confirm_attempt_dialog_message">Czy na pewno chcesz zakończyć podejście?</string>
    <!--Confirm false alarm Resources-->
    <string name="confirm_false_alarm_dialog_message">Czy na pewno chcesz zgłosić fałszywy alarm?</string>
    <!--Confirm positive alarm Resources-->
    <string name="confirm_positive_alarm_dialog_message">Potwierdź odnalezienie próbki.</string>
    <!--Confirm treat dropped Resources-->
    <string name="confirm_treat_dropped_dialog_message">Czy na pewno odnotować upuszczenie smakołyka na ring?</string>
    <!--Confirm defecation Resources-->
    <string name="confirm_defecation_dialog_message">Czy na pewno odnotować załatwianie potrzeb fizjologicznych na ringu?\nSpowoduje to niezaliczenie ringu przez uczestnika.</string>
    <!--Confirm disqualification Resources-->
    <string name="confirm_disqualification_dialog_message">Czy na pewno chcesz zdyskwalifikować zawodnika?</string>
    <string name="provide_disqualification_reason_dialog_message">Wprowadź powód dyskwalifikacji i klinij \'Ok\'</string>
    <!--Confirm new attempt Dialog Resources-->
    <string name="confirm_new_attempt_dialog_message">Czy na pewno chcesz zamknąć ekran z wynikiem?</string>
    <string name="scored_points_label">Uzyskane punkty:</string>
    <string name="time_of_attempt_label">Czas podejścia:</string>
    <string name="next_competitior_button_label">Następny zawodnik</string>
    <!--False alarm limit reached Dialog Resources-->
    <string name="false_alarms_reached_dialog_title">Przekroczono dopuszczalny limit fałszywych alarmów!</string>
    <string name="false_alarms_reached_dialog_message">Próba została zakończona. Użytkownik zakończył próbę z wynikiem 0 pkt i maksymalnym czasem.</string>
    <!--All samples found reached Dialog Resources-->
    <string name="all_samples_found_dialog_title">Odnaleziono wszystkie próbki!</string>
    <string name="all_samples_found_dialog_message">Próba została zakończona. Użytkownik odnalazł wszystkie próbki.</string>
    <!--False alarm limit reached Dialog Resources-->
    <string name="tread_dropped_limit_reached_dialog_title">Przekroczono dopuszczalny limit upuszczonych smaczków!</string>
    <string name="tread_dropped_limit_reached_dialog_message">Próba została zakończona. Użytkownik zakończył próbę z wynikiem 0 pkt i maksymalnym czasem.</string>
    <!--Disqualification reasons Resources-->
    <string name="defecation_disqualification_reason">Załatwianie potrzeb fizjologicznych na więcej niż jednym ringu.</string>
    <!--False alarm limit reached Dialog Resources-->
    <string name="disqualification_dialog_title">Zawodnik zdyskwalifikowany!</string>
    <!--ConfirmClearing Data Dialog Resources-->
    <string name="confirm_clearing_data_message">Czy jesteś pewien, że chcesz wyczyścić dane? Spowoduje to utratę wyników z wszystkich ringów, dla wszystkich uczestników, na wszystkich poziomach trudności.</string>
    <string name="data_cleared_confirmation_message">Wyniki zostały usunięte.</string>

    <!--Main Activity Resources-->
    <string name="basic_level_title">Podstawowy</string>
    <string name="basic_level_description">Jedna próbka\n2:00 min czasu przeszukania </string>
    <string name="advanced_level_title">Zaawansowany</string>
    <string name="advanced_level_description">Dwie próbki\n4:00 min czasu przeszukania </string>
    <string name="button_begin">Rozpocznij</string>
    <string name="false_alarm_label">Fałszywe alarmy:</string>
    <string name="defecation_label">Sikupy na ringu:</string>
    <string name="dropped_treat_label">Upuszczone smaczki:</string>
    <string name="actual_score_label">Aktualny wynik:</string>
    <string name="false_alarm_floating_button">false_alarm_floating_button</string>
    <string name="dropped_treat_button">Upuszczenie smaczka</string>
    <string name="defecation_button">Sikupa</string>
    <string name="disqualification_button">Dyskwalifikacja</string>
    <string name="samples_found_label">Znalezione próbki:</string>
    <string name="disqualification_reason_label">Powód dyskwalifikacji</string>

    <!--                      -Overall Impression Resources-                                    -->
    <!--Wrong score distribution resources-->
    <string name="wrong_score_distribution_dialog_title">Przekroczono liczbę dostępnych punktów!</string>
    <string name="wrong_score_distribution_dialog_message">Możesz wykorzystać maksymalnie 30 pkt. Rozdystrybuuj punkty w inny sposób.</string>
    <!--Scores without description resources-->
    <string name="score_without_description_dialog_title">Odbierasz punkty bez powodu!</string>
    <string name="score_without_description_dialog_message">Nie można odebrać punktów bez podania przyczyny. Upewnij się, że każde wypełnione pole z punktacją zawiera swój opis.</string>
    <!--Descriptions without scores resources-->
    <string name="description_without_score_dialog_title">Opis bez punktacji!</string>
    <string name="description_without_score_dialog_message">Nie można przeprocesować opisu bez przypisanej mu liczby punktów. Uzupełnij wartość punktową lub usuń opis jeśli go nie potrzebujesz.</string>
    <string name="description">Opis</string>
    <string name="score">Pkt.</string>
    <string name="overall_impression_title">Wrażenia ogólne</string>
    <string name="overall_impression_description_text">Opisz zachowanie za które chcesz odebrać punkty i podaj ile punktów chcesz za nie odebrać. \nMożesz odebrać maksymalnie 30pkt.</string>
    <string name="skip">Pomiń</string>
    <string name="save">Zapisz</string>
    <string name="add">add</string>
    <string name="failed_attempt">Niezaliczone</string>
    <string name="score_details">Szczegóły punktacji</string>
    <string name="overall_impression_label">Wrażenia ogólne:</string>
    <string name="next">Dalej</string>
    <string name="ring_1">Ring 1</string>
    <string name="ring_2">Ring 2</string>
    <string name="ring_3">Ring 3</string>
    <string name="ring_4">Ring 4</string>
    <string name="show_results_button_text">Pokaż wyniki</string>


    <string name="disrupted_attempt">"Przerwane podejście"</string>
    <string name="no_record">"Brak wpisu"</string>
    <string name="show_more">Rozwiń</string>
    <string name="hide_more">Zwiń</string>
    <string name="disqualified">Zdyskwalifikowany</string>

</resources>