<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AttemptSummaryActivity.RingSummaryActivity">

    <include
        android:id="@+id/timerTopBarLayout"
        layout="@layout/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view"
        style="@style/Widget.Material3.CardView.Elevated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:elevation="120dp"
        app:layout_constraintBottom_toTopOf="@+id/difficultySelectionCardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerTopBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/summaryPointsValue"
                style="@style/TextAppearance.Material3.DisplaySmall"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?colorPrimary"
                android:gravity="center"
                android:padding="8dp"
                android:textColor="?colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TableLayout
                android:id="@+id/ringSummaryTable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/summaryPointsValue">

                <TableRow android:padding="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_of_attempt_label"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/summaryTimeValue"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="start" />
                </TableRow>

                <TableRow android:padding="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/samples_found_label"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/samplesFoundValue"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="start" />
                </TableRow>
            </TableLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/scoreDetailsLabel"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?colorPrimary"
                android:padding="4dp"
                android:text="@string/score_details"
                android:textColor="?colorOnPrimary"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/ringSummaryTable" />

            <TableLayout
                android:id="@+id/scoreDetailsContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/scoreDetailsLabel">

                <TableRow android:padding="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/false_alarm_label"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/falseAlarmsValue"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="start" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/falseAlarmsScoreImpact"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:gravity="start"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:padding="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defecation_label"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/summaryDefecationValue"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="start" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/summaryDefecationScoreImpact"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:gravity="start"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:padding="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dropped_treat_label"
                        android:textStyle="bold" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/summaryDroppedTreatsValue"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:gravity="start"/>

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/summaryDroppedTreatsScoreImpact"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:gravity="start"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow android:padding="4dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/summaryOverallImpressionLabel"
                        style="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overall_impression_label"
                        android:textStyle="bold"
                        android:visibility="gone" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/overallImpressionContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scoreDetailsContainer">

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/disqualificationReasonLabel"
                style="@style/TextAppearance.Material3.TitleSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="?colorErrorContainer"
                android:textColor="?colorOnErrorContainer"
                android:padding="4dp"
                android:text="@string/disqualification_reason_label"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/overallImpressionContainer" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/disqualificationReasonText"
                style="@style/TextAppearance.Material3.BodySmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/disqualificationReasonLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/difficultySelectionCardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:onClick="onNextAttemptButtonCLick"
        android:text="@string/next"
        app:icon="@drawable/baseline_check_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>