<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/timerContainer"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="?attr/theme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.TimerActivity.TimerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timerTopBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/advanced_difficulty_color"
        android:paddingBottom="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/timerDifficultyImage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@color/advanced_difficulty_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ImageView.Corner"
            app:srcCompat="@drawable/advanced_level_icon" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timerDifficultyTextView"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timerRingDetailsTextView"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/md_theme_light_onPrimary"
            app:layout_constraintStart_toStartOf="@+id/timerDifficultyTextView"
            app:layout_constraintTop_toBottomOf="@+id/timerDifficultyTextView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/timerUserDetailsTextView"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/md_theme_light_onPrimary"
            app:layout_constraintStart_toStartOf="@+id/timerRingDetailsTextView"
            app:layout_constraintTop_toBottomOf="@+id/timerRingDetailsTextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/timeTextView"
        style="@style/TextAppearance.Material3.DisplayMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_timer_value"
        app:layout_constraintBottom_toBottomOf="@+id/timeProgressBar"
        app:layout_constraintEnd_toEndOf="@+id/timeProgressBar"
        app:layout_constraintStart_toStartOf="@+id/timeProgressBar"
        app:layout_constraintTop_toTopOf="@+id/timeProgressBar" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/timeProgressBar"
        android:layout_width="280dp"
        android:layout_height="502dp"
        android:progress="85"
        app:indicatorSize="280dp"
        app:layout_constraintBottom_toTopOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timerTopBarLayout"
        app:layout_constraintVertical_chainStyle="packed"
        app:trackColor="@color/md_theme_light_surfaceVariant"
        app:trackThickness="24dp" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        android:src="@drawable/outline_play_circle_filled_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/play_button"
        android:onClick="onPlayButtonClick"/>

    <ImageButton
        android:id="@+id/pauseButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        android:src="@drawable/round_pause_circle_filled_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintEnd_toEndOf="@+id/playButton"
        app:layout_constraintStart_toStartOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton"
        android:contentDescription="@string/pause_button"
        android:onClick="onPauseButtonClick"/>

    <ImageButton
        android:id="@+id/resetButton"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        android:src="@drawable/outline_replay_circle_filled_24"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintEnd_toStartOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton"
        android:visibility="invisible"
        android:contentDescription="@string/reset_button"
        android:onClick="onResetButtonClick"/>

    <ImageButton
        android:id="@+id/doneButton"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        android:src="@drawable/baseline_check_circle_24"
        app:layout_constraintBottom_toBottomOf="@+id/playButton"
        app:layout_constraintStart_toEndOf="@+id/playButton"
        app:layout_constraintTop_toTopOf="@+id/playButton"
        android:visibility="invisible"
        android:contentDescription="@string/done_button"
        android:onClick="onDoneButtonClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>